logs/phylorank.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/biolib'...
Listing './lib/python3.5/site-packages/biolib/external'...
Listing './lib/python3.5/site-packages/biolib/misc'...
Compiling './lib/python3.5/site-packages/biolib/parallel.py'...
***   File "./lib/python3.5/site-packages/biolib/parallel.py", line 199
    except Exception, _err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/biolib/plots'...
Compiling './lib/python3.5/site-packages/biolib/plots/abstract_plot.py'...
***   File "./lib/python3.5/site-packages/biolib/plots/abstract_plot.py", line 100
    print '[Error] The mpld3 module is required to save HTML figures.'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biolib/plots/scatter.py'...
***   File "./lib/python3.5/site-packages/biolib/plots/scatter.py", line 102
    print 'comp98', comp98 * 100.0 / len(x)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/biolib/plots/scatter2.py'...
***   File "./lib/python3.5/site-packages/biolib/plots/scatter2.py", line 86
    print fit
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biolib/taxonomy.py'...
***   File "./lib/python3.5/site-packages/biolib/taxonomy.py", line 465
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/biolib-0.0.45.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/phylorank'...
Compiling './lib/python3.5/site-packages/phylorank/bl_dist.py'...
***   File "./lib/python3.5/site-packages/phylorank/bl_dist.py", line 177
    print header
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/phylorank/common.py'...
***   File "./lib/python3.5/site-packages/phylorank/common.py", line 86
    print '[Warning] Species name %s for %s is invalid: %s' % (species_name, taxon_id, error_msg)
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/phylorank/decorate.py'...
***   File "./lib/python3.5/site-packages/phylorank/decorate.py", line 307
    print taxa_list
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/phylorank/outliers.py'...
***   File "./lib/python3.5/site-packages/phylorank/outliers.py", line 947
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/phylorank/plot'...
Compiling './lib/python3.5/site-packages/phylorank/plot/distribution_plot.py'...
***   File "./lib/python3.5/site-packages/phylorank/plot/distribution_plot.py", line 65
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/phylorank/plot/robustness_plot.py'...
***   File "./lib/python3.5/site-packages/phylorank/plot/robustness_plot.py", line 93
    print '  [Warning] Group is not monophyletic %s' % taxon
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/phylorank-0.0.34.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
